[package]
name = "actor"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
swss-common = { path = "../swss-common", features = ["async"] }
swss-serde = { path = "../swss-serde" }
swbus-edge = { path = "../swbus-edge" }
serde.workspace = true
tokio.workspace = true
# slotmap = "1"
derive_more = { version = "2", features = ["full"] }
futures = "0.3"

[lints]
workspace = true
