[package]
name = "hamgrd"
description = "SONiC DASH high availability manager daemon"
categories = ["command-line-utilities"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
serde.workspace = true
swbus-actor = { path = "../swbus-actor" }
swss-common = { path = "../swss-common" }
swss-common-bridge = { path = "../swss-common-bridge" }
strum.workspace = true

# For macros
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[[bin]]
name = "hamgrd"

[lib]
name = "hamgrd_macro"
path = "macro/lib.rs"
proc-macro = true
test = false
