[package]
name = "hamgrd"
description = "SONiC DASH high availability manager daemon"
categories = ["command-line-utilities"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
swbus-actor = { path = "../swbus-actor" }
swss-common = { path = "../swss-common" }
swss-common-bridge = { path = "../swss-common-bridge" }
swss-serde = { path = "../swss-serde" }
